Adição dos cenários pesquisa por categoria positivos e negativos e organização do código

--- a/configs/mobile.properties
+++ b/configs/mobile.properties
@@ -1,5 +1,5 @@
 platformName=Android
-deviceName=Erms
+deviceName=Redmi
 platformVersion=9
 appPackage=com.Advantage.aShopping
 appActivity=com.Advantage.aShopping.SplashActivity
