--- a/configs/mobile.properties
+++ b/configs/mobile.properties
@@ -1,5 +1,5 @@
 platformName=Android
-deviceName=Redmi
+deviceName=Erms
 platformVersion=9
 appPackage=com.Advantage.aShopping
 appActivity=com.Advantage.aShopping.SplashActivity
